[package]
name = "app"
version = "0.1.0"
edition = "2024"

[dependencies]
dirs = "5.0"
eframe = "0.22.0"
egui = "0.22.0"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
arboard = "3.2.0"
open = "4.0"
trash = "3.0"
fs_extra = "1.3.0"
human_bytes = "0.4.1"
